@@ -50,6 +50,16 @@ if not "!ARG!" == "" (
     goto again
 )
 
+call :set_java_version
+
+if !_java_major_version! geq 24 (
+  rem Allow JNI access for all compiler code. In particular, this is needed for jansi (see `PlainTextMessageRenderer`).
+  set JAVA_OPTS=!JAVA_OPTS! "--enable-native-access=ALL-UNNAMED"
+
+  rem Suppress unsafe deprecation warnings, see KT-76799 and IDEA-370928.
+  set JAVA_OPTS=!JAVA_OPTS! "--sun-misc-unsafe-memory-access=allow"
+)
+
 set "KONAN_LIB=%_KONAN_HOME%\konan\lib"
 
 set "KONAN_JAR=%KONAN_LIB%\kotlin-native-compiler-embeddable.jar"
@@ -76,6 +86,30 @@ rem # subroutines
   set _BIN_DIR=
   for %%i in (%~sf0) do set _BIN_DIR=%_BIN_DIR%%%~dpsi
   set _KONAN_HOME=%_BIN_DIR%..
+goto :eof
+rem
+rem Parses "java -version" output and stores the major version to _java_major_version.
+rem Note that this only loads the first component of the version, so "1.8.0_265" -> "1".
+rem But it's fine because major version is 9 for JDK 9, and so on.
+rem Needs to be executed in the EnableDelayedExpansion mode.
+:set_java_version
+  set _version=
+  rem Parse output and take the third token from the string containing " version ".
+  rem It should be something like "1.8.0_275" or "15.0.1".
+  for /f "tokens=3" %%i in ('java -version 2^>^&1 ^| findstr /i " version "') do (
+    rem Split the string by "-" or "." and take the first token.
+    for /f "delims=-. tokens=1" %%j in ("%%i") do (
+      rem At this point, _version should be something like "1 or "15. Note the leading quote.
+      set _version=%%j
+    )
+  )
+  if "!_version!"=="" (
+    rem If failed to parse the output, set the version to 1.
+    set _java_major_version=1
+  ) else (
+    rem Strip the leading quote.
+    set _java_major_version=!_version:~1!
+  )
 goto :eof
 
 :end
